<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        style="@style/QuestionStyle"
        android:text="@string/q1"/>
    <RadioGroup
        android:orientation="vertical"
        style="@style/QuestionStyle">
        <RadioButton
            android:id="@+id/q1_A_button"
            style="@style/QuestionStyle"
            android:text="@string/q1A"
            />
        <RadioButton
            android:id="@+id/q1_B_button"
            style="@style/QuestionStyle"
            android:text="@string/q1B"/>
        <RadioButton
            android:id="@+id/q1_C_button"
            style="@style/QuestionStyle"
            android:text="@string/q1C"/>
        <RadioButton
            android:id="@+id/q1_D_button"
            style="@style/QuestionStyle"
            android:text="@string/q1D"/>
    </RadioGroup>

    <TextView
        style="@style/QuestionStyle"
        android:text="@string/q2"/>
    <RadioGroup
        android:orientation="vertical"
        style="@style/QuestionStyle">
        <RadioButton
            android:id="@+id/q2_A_button"
            style="@style/QuestionStyle"
            android:text="@string/q2A"
            />
        <RadioButton
            android:id="@+id/q2_B_button"
            style="@style/QuestionStyle"
            android:text="@string/q2B"/>
        <RadioButton
            android:id="@+id/q2_C_button"
            style="@style/QuestionStyle"
            android:text="@string/q2C"/>
        <RadioButton
            android:id="@+id/q2_D_button"
            style="@style/QuestionStyle"
            android:text="@string/q2D"/>
    </RadioGroup>

    <TextView
        style="@style/QuestionStyle"
        android:text="@string/q3"/>
    <RadioGroup
        android:orientation="vertical"
        style="@style/QuestionStyle">
        <RadioButton
            android:id="@+id/q3_A_button"
            style="@style/QuestionStyle"
            android:text="@string/q3A"
            />
        <RadioButton
            android:id="@+id/q3_B_button"
            style="@style/QuestionStyle"
            android:text="@string/q3B"/>
        <RadioButton
            android:id="@+id/q3_C_button"
            style="@style/QuestionStyle"
            android:text="@string/q3C"/>
        <RadioButton
            android:id="@+id/q3_D_button"
            style="@style/QuestionStyle"
            android:text="@string/q3D"/>
    </RadioGroup>

    <TextView
        style="@style/QuestionStyle"
        android:text="@string/q4"/>
    <RadioGroup
        android:orientation="vertical"
        style="@style/QuestionStyle">
        <RadioButton
            android:id="@+id/q4_A_button"
            style="@style/QuestionStyle"
            android:text="@string/q4A"
            />
        <RadioButton
            android:id="@+id/q4_B_button"
            style="@style/QuestionStyle"
            android:text="@string/q4B"/>
        <RadioButton
            android:id="@+id/q4_C_button"
            style="@style/QuestionStyle"
            android:text="@string/q4C"/>
        <RadioButton
            android:id="@+id/q4_D_button"
            style="@style/QuestionStyle"
            android:text="@string/q4D"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/QuestionStyle"
        android:layout_gravity="center_horizontal"
        android:text="Submit"
        android:onClick="submit"
        />
</LinearLayout>


</ScrollView>